# Comfypencil

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  __init__.py  pyproject.toml
.github/workflows/: ci.yml
backend/: __init__.py  constants.py  nodes.py  rendering.py  routes.py  store.py
example_workflows/: comfypencil_basic.json  comfypencil_material_maps.json  comfypencil_split_preview.json
locales/en/: commands.json  nodeDefs.json  settings.json
tests/: test_backend.py  test_repo_assets.py
web/: comfy_pencil_extension.js  comfypencil_node_badge_theme.js
web/docs/: ComfyPencilExtractLayer.md  ComfyPencilImportLayer.md  ComfyPencilReceivePreview.md  ComfyPencilRenderDocument.md  ComfyPencilStudio.md
web/studio/: api.js  brush-editor-schema.js  brush-preset-files.js  brush-presets-store.js  brush-preview.js  brush-stamp.js  brush-textures.js  brush-utils.js  canvas-engine.js  color-palettes.js  color-wheel.js  constants.js  design-system.css  project-file.js  studio-app.js  studio-helpers.js  studio-layout.js  studio-recovery.js  studio-shortcuts.js  styles.css  ui-primitives.js
