[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "comfypencil"
version = "0.1.0"
description = "A layered painting studio for ComfyUI with workflow-friendly drawing document nodes."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["comfyui", "painting", "drawing", "image-editing", "textures"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: GPU",
  "Topic :: Multimedia :: Graphics :: Editors :: Raster-Based",
]
dependencies = []

[project.urls]
Repository = "https://github.com/criskb/Comfypencil"
Homepage = "https://github.com/criskb/Comfypencil"
Issues = "https://github.com/criskb/Comfypencil/issues"

[tool.comfy]
PublisherId = "crisbjorndal"
DisplayName = "ComfyPencil"
requires-comfyui = ">=0.16.0"
